--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -3,6 +3,7 @@ channels:
         - conda-forge
         - defaults
 dependencies:
+        - jupyterlab
         - rise
         - jupyter-server-proxy
         - code-server
