--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -53,6 +53,6 @@
 	"remoteUser": "vscode",
 	"features": {
 		"fish": "latest",
-		"jupyterlab": "latest"
+		"ghcr.io/devcontainers/features/python:1": {}
 	}
 }
